--- a/src/components/ThemeToggler.astro
+++ b/src/components/ThemeToggler.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon/components';
 
 const themes = [
-	{ name: 'os-default', icon: 'ri:contrast-fill' },
+	// { name: 'os-default', icon: 'ri:contrast-fill' },
 	{ name: 'light', icon: 'ri:sun-fill' },
 	{ name: 'dark', icon: 'ri:moon-line' },
 ];
