--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,8 @@ import MarkdownLayout from '~/layouts/MarkdownLayout.astro';
 		formats={['avif', 'webp']}
 		alt="mountains"
 	/>
-	<p>Text placeholder via <a href="https://jeffsum.com/" target="_blank">Jeffsum</a>.</p>
+	Nothing right now!
+	<!-- <p>Text placeholder via <a href="https://jeffsum.com/" target="_blank">Jeffsum</a>.</p>
 	<p>
 		So you two dig up, dig up dinosaurs? What do they got in there? King Kong? My dad once told me,
 		laugh and the world laughs with you, Cry, and I'll give you something to cry about you little
@@ -38,5 +39,5 @@ import MarkdownLayout from '~/layouts/MarkdownLayout.astro';
 		They're using our own satellites against us. And the clock is ticking. Do you have any idea how
 		long it takes those cups to decompose. My dad once told me, laugh and the world laughs with you,
 		Cry, and I'll give you something to cry about you little bastard!
-	</p>
+	</p> -->
 </MarkdownLayout>
