--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,16 +12,17 @@ import MarkdownLayout from '~/layouts/MarkdownLayout.astro';
 	currentNav="Home"
 >
 	<div class="flex flex-col items-center gap-4 xl:flex-row">
-		<Picture class="lg:max-w-md" src={img} formats={['avif', 'webp']} alt="a dog" loading="eager" />
+		<!-- <Picture class="lg:max-w-md" src={img} formats={['avif', 'webp']} alt="a dog" loading="eager" /> -->
 		<div>
-			<h1>Hello there! I am Ladit👋</h1>
+			<h1>Hello there! I am Hongkai👋</h1>
 			<p>
-				This is a blog template built with <a href="https://astro.build">Astro</a>. The theme
+				<!-- This is a blog template built with <a href="https://astro.build">Astro</a>. The theme
 				originates from <a href="https://github.com/varkai/hugo-theme-zozo">hugo-theme-zozo</a>.
 				Check out <a href="/posts/getting-started">the docs</a> to get started. Here are some
-				features:
+				features: -->
+				This is my x-th times try to build a blog.  I hope I can stick with it this time.
 			</p>
-			<ul class="list-disc">
+			<!-- <ul class="list-disc">
 				<li>
 					Fast and light weight. Lighthouse 4 * 100/100 on desktop. 1 point decreased on mobile.
 				</li>
@@ -42,7 +43,7 @@ import MarkdownLayout from '~/layouts/MarkdownLayout.astro';
 				<li>comment system powered by <a href="https://github.com/giscus/giscus">giscus</a></li>
 				<li>SEO-friendly setup with canonical URLs and OpenGraph data</li>
 				<li>RSS / Sitemap.xml / dynamic open graph image generation</li>
-			</ul>
+			</ul> -->
 		</div>
 	</div>
 </MarkdownLayout>
