--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { Picture } from 'astro:assets';
+// import { Picture } from 'astro:assets';
 // import img from '~/assets/undraw_dog_c7i6.svg';
 import { SiteDescription, SiteTitle } from '~/config';
 import MarkdownLayout from '~/layouts/MarkdownLayout.astro';
