--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -136,6 +136,16 @@ for (const platform in Socials) {
 	</div>
 </header>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LZYH3N4Z6Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LZYH3N4Z6Q');
+</script>
+
 <script>
 	const toggleMenu = (document: Document) => {
 		if (window.matchMedia('(min-width: 1024px)').matches) {
